<?xml version="1.0"?>
<package format="3">
  <name>dynamics</name>
  <version>0.0.1</version>
  <description>The yumi kinematics and dynamics package</description>

  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>TODO</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
