<?xml version="1.0"?>
<package format="3">
  <name>motion_server</name>
  <version>0.0.0</version>
  <description>The state server package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>TODO</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
