<?xml version="1.0"?>
<package format="3">
  <name>py_controllers</name>
  <version>0.0.0</version>
  <description>Simple python controllers for Yumi</description>
  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>TODO</license>

  <depend>sensor_msgs</depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
