<?xml version="1.0"?>
<package format="3">
  <name>state_server</name>
  <version>0.0.0</version>
  <description>The state server package</description>

  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>TODO</license>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
