<?xml version="1.0"?>
<package format="3">
  <name>state_server</name>
  <version>0.0.0</version>
  <description>The state server package</description>

  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>TODO</license>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>yumi_packets</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
