<?xml version="1.0"?>
<package format="3">
  <name>velocity_control</name>
  <version>0.0.0</version>
  <description>ROS 2 port of egm</description>

  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>TODO</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
