<?xml version="1.0"?>
<package format="3">
    <name>yumi_description</name>
    <version>0.0.1</version>
    <description>The abb yumi description package</description>

    <maintainer email="jjhu1993@gmail.com">jjhu</maintainer>
    <license>BSD</license>

    <author email="jjhu1993@gmail.com">jjhu</author>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
