<?xml version="1.0"?>
<package format="2">
  <name>yumi_launch</name>
  <version>0.0.1</version>
  <description>Launch package to bring up yumi</description>

  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>TODO</license>

  <depend>yumi_description</depend>
  <depend>xacro</depend>
</package>
